# pstream

./: .build.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: block.rs  endless.rs  io.rs  lib.rs
src/io/: fs.rs  void.rs
tests/: io_filesystem.rs
