[package]
name = "pstream"
version = "0.1.0"
edition = "2021"

authors = ["antonta <work@antonta.net>"]
description = "A persistent byte stream over block storage."
license = "MIT"
repository = "https://git.sr.ht/~antonta/pstream"
keywords = ["file", "io", "data", "storage", "concurrency"]
categories = ["filesystems", "database-implementations"]

[dependencies]
crc32fast = "~1.3"
vlock = "~0.2"

[target.'cfg(unix)'.dependencies]
libc = { version = "~0.2", optional = true }

[features]
default = []
io-filesystem = []

[package.metadata.docs.rs]
all-features = true

[[test]]
name = "io_filesystem"
path = "tests/io_filesystem.rs"
required-features = ["io-filesystem"]
